--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.26.1",
+    "animate.css": "^4.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-tilt": "^0.1.4"
